# robotics-rl

./: .env.example  .gitignore  MUJOCO_LOG.TXT  Makefile  README.md  config.py  dds_bridge.py  harness.py  install.sh  main.py  orchestrator.py  pyproject.toml  read_sensor.py  renderer.py  requirements.txt  setup.sh  setup_robot.sh  sim_context.py  sim_engine.py  tune.yaml  tune.yaml.example  unitree_robots
actions/: __init__.py  base.py  joints.py  policy.py  stand.py  walk.py
cortex/: __init__.py
docs/: deployment.md  inference.md  training.md  tuning_walk_v5.md
isaac_sim/: Containerfile  Containerfile.viewer  create_g1_scene.py  dds_bridge.py  dds_bridge_editor.py  entrypoint.sh  viewer.html  viewport_stream.py  zmq_to_hls.py
missions/: demo_podium.yaml  stand_walk_50m.yaml
planner/: __init__.py  mission.py  mission_runner.py  path_follower.py
policies/: g1_spinkick.onnx  g1_stand_v2.onnx  g1_stand_v2.onnx.data  g1_stand_v4.onnx  g1_stand_v4.onnx.data  g1_stand_v5.onnx  g1_stand_v5.onnx.data  g1_walk_v1.onnx  g1_walk_v1.onnx.data  g1_walk_v2.onnx  g1_walk_v2.onnx.data  g1_walk_v3.onnx  g1_walk_v3.onnx.data  g1_walk_v4.onnx  g1_walk_v4.onnx.data  g1_walk_v5.onnx  g1_walk_v5.onnx.data
rl/: __init__.py  evaluate.py  export_onnx.py  import_onnx.py  train.py
scene/: __init__.py  color_course.xml  flat_ground.xml  g1_29dof_no_hand.xml  simulation.py  stair_training.xml  water_bottle_stage.xml
scripts/: download_groot_model.py  launch_robot.py  model_runner.py  mujoco_engine.py  policy_runners.py  send_commands.py
server/: app.py
templates/: index.html
(+54 files in other folders)
